# sortique

./: .gitignore  CHANGELOG.md  Makefile  README.md  __init__.py  __main__.py  app.py  cli.py  constants.py  factory.py  pyproject.toml  requirements.txt  sortique.spec
.claude/: settings.local.json
config/: defaults.json
data/: config_manager.py  database.py  file_system.py  hash_manifest.py  lock_manager.py  models.py
docs/: ARCHITECTURE.md  CONFIGURATION.md
engine/: burst_detector.py  categorizer.py  dedup.py  detector.py  hasher.py  pair_detector.py  path_generator.py  scanner.py
scripts/: build_linux.sh  build_macos.sh  build_windows.bat
service/: collection_review.py  dry_run.py  notification_service.py  pipeline.py  session_logger.py  session_manager.py  space_checker.py  thread_pool.py  undo_manager.py
tests/: test_audio_metadata.py  test_burst_detector.py  test_categorizer.py  test_cli.py  test_collection_review.py  test_config_manager.py  test_date_parser.py  test_dedup.py  test_detector.py  test_dry_run.py  test_exif_extractor.py  test_exiftool_common.py  test_factory.py  test_file_system.py  test_hash_manifest.py  test_hasher.py  test_image_processor.py  test_lock_manager.py  test_musicbrainz_client.py  test_pair_detector.py  test_path_generator.py  test_pipeline.py  test_pipeline_integration.py  test_processors.py  test_scanner.py  test_session_logger.py  test_session_manager.py  test_space_checker.py  test_thread_pool.py  test_undo_manager.py  test_video_metadata.py
ui/: collection_review_view.py  destination_selector.py  dry_run_view.py  (+6 more)
(+15 files in other folders)
