[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sortique"
version = "1.0.0"
description = "A smart desktop file organizer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "Pillow>=10.0.0",
    "piexif>=1.1.3",
    "rawpy>=0.19.0",
    "pillow-heif>=0.13.0",
    "mutagen>=1.47.0",
    "imagehash>=4.3.1",
    "python-magic>=0.4.27",
    "musicbrainzngs>=0.7.1",
]

[project.scripts]
sortique = "sortique.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pyinstaller>=6.0.0",
]

# The repo root IS the sortique package; tell setuptools to find it from the
# parent directory.
[tool.setuptools.packages.find]
where = [".."]
include = ["sortique*"]

[tool.setuptools.package-data]
"sortique" = ["config/defaults.json", "resources/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
